Bug 334082 - clicking on a desktop file opens kate
Summary: clicking on a desktop file opens kate
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: master
Platform: unspecified Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-29 13:31 UTC by Marco Martin
Modified: 2014-04-29 14:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marco Martin 2014-04-29 13:31:32 UTC
clicking on a desktop file visible from folderview, opens the desktop file in kate instead of launching the application.
looks like it's using xdg-open, but that doesn't execute desktop files as far i understood for security concerns.
a c++ binding that uses KRun should be used, 

Reproducible: Always
Comment 1 Marco Martin 2014-04-29 14:16:35 UTC
Git commit 87415017cef5896d1724332d5372cc2abb72e349 by Marco Martin.
Committed on 29/04/2014 at 14:14.
Pushed by mart into branch 'master'.

KRun doesn't really support schemeless urls

make sure the urls that are just a path, being representative
 of local paths, make them file://

M  +7    -1    containments/folder/plugin/foldermodel.cpp

http://commits.kde.org/plasma-desktop/87415017cef5896d1724332d5372cc2abb72e349