KRun doesn't really support schemeless urls

make sure the urls that are just a path, being representative
 of local paths, make them file://
BUG:334082